Check for updates and others to core